# src/tellers_api/openapi.tellers_public_api.yaml
@@ -174,6 +174,149 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
+  /users/entity/list:
+    get:
+      tags:
+      - accepts-api-key
+      summary: List Entities
+      operationId: list_entities_users_entity_list_get
+      parameters:
+      - name: offset
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 0
+          title: Offset
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: integer
+          default: 20
+          title: Limit
+      - name: x-api-key
+        in: header
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: X-Api-Key
+      - name: authorization
+        in: header
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Authorization
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EntityResponse'
+                title: Response List Entities Users Entity List Get
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /users/entity/create:
+    post:
+      tags:
+      - accepts-api-key
+      summary: Create Entity
+      operationId: create_entity_users_entity_create_post
+      parameters:
+      - name: x-api-key
+        in: header
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: X-Api-Key
+      - name: authorization
+        in: header
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Authorization
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateEntityRequest'
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CreateEntityResponse'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+  /users/entity/preprocess:
+    post:
+      tags:
+      - accepts-api-key
+      summary: Process Entity
+      operationId: process_entity_users_entity_preprocess_post
+      parameters:
+      - name: priority
+        in: query
+        required: false
+        schema:
+          $ref: '#/components/schemas/TaskPriority'
+          default: highest
+      - name: x-api-key
+        in: header
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: X-Api-Key
+      - name: authorization
+        in: header
+        required: false
+        schema:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Authorization
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProcessEntityRequest'
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RequestTaskResponse'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
   /agent/response/{chat_id}:
     delete:
       tags:
@@ -742,6 +885,53 @@ components:
       - context
       - created_at
       title: ChatMessageUserResponse
+    CreateEntityRequest:
+      properties:
+        group_id:
+          type: string
+          title: Group Id
+        name:
+          type: string
+          title: Name
+        description:
+          type: string
+          title: Description
+      type: object
+      required:
+      - group_id
+      - name
+      - description
+      title: CreateEntityRequest
+    CreateEntityResponse:
+      properties:
+        entity_id:
+          type: string
+          title: Entity Id
+      type: object
+      required:
+      - entity_id
+      title: CreateEntityResponse
+    EntityResponse:
+      properties:
+        id:
+          type: string
+          title: Id
+        name:
+          type: string
+          title: Name
+        description:
+          type: string
+          title: Description
+        group_id:
+          type: string
+          title: Group Id
+      type: object
+      required:
+      - id
+      - name
+      - description
+      - group_id
+      title: EntityResponse
     FileReference:
       properties:
         file_name:
@@ -805,6 +995,21 @@ components:
       - assets
       - version
       title: ProcessAssetsRequest
+    ProcessEntityRequest:
+      properties:
+        entity_id:
+          type: string
+          title: Entity Id
+        assets:
+          items:
+            $ref: '#/components/schemas/AssetUploadResponse'
+          type: array
+          title: Assets
+      type: object
+      required:
+      - entity_id
+      - assets
+      title: ProcessEntityRequest
     RequestTaskResponse:
       properties:
         task_id:
